--- a/pom.xml
+++ b/pom.xml
@@ -59,6 +59,11 @@
 			<version>3.3.1</version>
 		</dependency>
 		<dependency>
+			<groupId>org.apache.maven</groupId>
+			<artifactId>maven-compat</artifactId>
+			<version>3.3.1</version>
+		</dependency>
+		<dependency>
 			<groupId>org.apache.maven.wagon</groupId>
 			<artifactId>wagon-http</artifactId>
 			<version>3.0.0</version>
